Name:           jscheck
Version:        0.1
Description:    Limited static type checking for javascript
Author:         Tim Disney and Huascar Sanchez
Maintainer:     tim.disney@gmail.com
Build-Type:     Simple
Cabal-Version:  >= 1.2

Flag Tests
  Description:  Builds the tests
  Default:      True

Executable test-jscheck
  Main-is:          Test.hs 
  hs-source-dirs:   src
  Build-Depends:    parsec>=2.0,test-framework, test-framework-hunit, HUnit >=1.2

Executable jscheck
  Main-is:          Main.hs
  hs-source-dirs:   src
  Build-Depends:    base>=3, parsec>=2.0, mtl, regex-compat>=0.71, containers, 
                    array, directory, bytestring
  GHC-Options:      -Wall
  Extensions:       OverlappingInstances, PatternSignatures, MultiParamTypeClasses,
                    FlexibleInstances, TypeSynonymInstances, UndecidableInstances
